Start removing usages of FileInfoFactory.leafFile